<resources>
    <string name="app_name">Quản Lý Phòng Trọ</string>
    <string name="map_key" translatable="false">
AIzaSyAdYl5sPMCD1GC_A4yZsogPLoQo2lv9jSQ  </string>
    <!-- colors -->
    <color name="primary">#785447</color>
    <color name="primaryDark">#5B3F36</color>
    <string name="signin">
         <u>Sign in here</u>.
    </string>
    //facebook
    <string name="facebook_app_id">717522132085560</string>
    <!-- dimensions -->
    <dimen name="image_width">120dp</dimen>
    <dimen name="image_final_width">32dp</dimen>
    <dimen name="spacing_normal">16dp</dimen>

    <!-- styles -->

    <!-- strings -->
    <string name="m2">m<sup>2</sup></string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_namebook">Enter Name Book</string>
    <string name="error_message_nxb">Enter NXB</string>
    <string name="error_message_author">Enter Author</string>
    <string name="error_message_Price">Enter Price</string>
    <string name="error_message_amout">Enter Amout</string>
    <string name="error_message_user">Enter User Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_phone">Enter Valid Phone</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="text_register_successful">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="error_valid_email">Wrong Email</string>
    <string name="error_valid_phone">Wrong Phone</string>
    <string name="text_member">Already a member? Login</string>
    <string name="error_id_exists">ID Already Exists</string>
    <string name="error_message_id">Enter Valid ID</string>
    <string name="error_message_namecategory">Enter Valid Name Category</string>
    <string name="error_message_description">Enter Valid Description </string>
    <string name="error_message_location">Enter Valid Location</string>
    <string name="successfully">Successfully</string>
    <string name="error_internet">Please connect to internet!</string>
    <string name="add_new_contract"><u>Tạo hợp đồng</u></string>
    <string name="add_new_bill"><u>Tạo hóa đơn</u></string>
    // Contract detail
    <string name="datebegin"><u>Ngày khách vào:</u></string>
    <string name="dateend"><u>Hạn hợp đồng:</u></string>
    <string name="priceroom"><u>Giá phòng:</u></string>
    <string name="monthpẻiodic"><u>Chu kỳ trả tiền phòng:</u></string>
    <string name="dateterm"><u>Ngày thanh toán:</u></string>
    <string name="deposits"><u>Tiền cọc:</u></string>
    <string name="service"><u>Xem</u></string>
    //Bill
    <string name="billcustomername"><u>Khách thuê:</u></string>
    <string name="bill"><u>Hóa đơn:</u></string>
    <string name="billtotal"><u>Tổng tiền:</u></string>
    //MonthPeriodic
    <string-array name="MonthPeriodic">
        <item>1 tháng</item>
        <item>2 tháng</item>
        <item>3 tháng</item>
        <item>6 tháng</item>
        <item>12 tháng</item>
    </string-array>
    <string-array name="dayterm">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
    </string-array>

</resources>
