<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:hardwareAccelerated="true"
    app:cardBackgroundColor="@color/ColorWhite"
    app:cardCornerRadius="5dp"
    card_view:cardElevation="5dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textStyle="bold"
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_play"
                android:text="@string/billcustomername"
                android:textSize="18dp"></TextView>

            <TextView
                android:paddingLeft="5dp"
                android:id="@+id/tvbillnamecustomer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nguyễn Ngọc Duy"
                android:textSize="18dp"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textStyle="bold"
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_play"
                android:text="@string/bill"
                android:textSize="18dp"></TextView>

            <TextView
                android:paddingLeft="5dp"
                android:id="@+id/tvbilldatebeginandend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Từ 11/12/2012 đến 11/12/2019"
                android:textSize="18dp"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textStyle="bold"
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_play"
                android:text="@string/billtotal"
                android:textSize="18dp"></TextView>
            <TextView
                android:paddingLeft="5dp"
                android:id="@+id/tvTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1000000000 VND"
                android:textSize="18dp"></TextView>
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>