<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="Activities.ContractDetailActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/tool_bar"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="THÔNG TIN HỢP ĐỒNG"
                android:textSize="16dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/tvtitle2"
                android:layout_below="@+id/tvtitle1"
                android:background="@color/ColorWhite"
                android:padding="10dp"></RelativeLayout>

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvtitle1"
                android:drawableLeft="@drawable/ic_play"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:text="@string/datebegin"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvdatebegin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvtitle1"
                android:layout_toRightOf="@+id/tv1"
                android:paddingTop="10dp"
                android:text="11/11/2019"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv1"
                android:drawableLeft="@drawable/ic_play"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/dateend"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvdateend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv1"
                android:layout_toRightOf="@+id/tv2"
                android:text="11/11/2020"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv2"
                android:drawableLeft="@drawable/ic_play"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/priceroom"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvpriceroom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv2"
                android:layout_toRightOf="@+id/tv3"
                android:text="1.500.000 VND"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv3"
                android:drawableLeft="@drawable/ic_play"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/monthpẻiodic"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvmonthperiodic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv3"
                android:layout_toRightOf="@+id/tv4"
                android:paddingBottom="10dp"
                android:text="1 tháng"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tv7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv4"
                android:drawableLeft="@drawable/ic_play"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"

                android:text="@string/dateterm"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvdateterm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv4"
                android:layout_toRightOf="@+id/tv7"
                android:paddingBottom="10dp"
                android:text="1"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tv8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv7"
                android:drawableLeft="@drawable/ic_play"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:text="@string/deposits"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvdeposits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv7"
                android:layout_toRightOf="@+id/tv8"
                android:paddingBottom="10dp"
                android:text="500,000 VND"
                android:textSize="18dp" />


            <TextView
                android:id="@+id/tvtitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv8"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="THÔNG TIN KHÁCH THUÊ"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tvtitle3"
                android:layout_below="@+id/tvtitle2"
                android:background="@color/ColorWhite"
                android:orientation="horizontal"></LinearLayout>

            <LinearLayout
                android:id="@+id/lncustomer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvtitle2"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgcustomer"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/avatar"
                    app:civ_border_color="@color/Color1"
                    app:civ_border_width="2dp" />

                <TextView
                    android:id="@+id/tvnamecustomer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nguyễn Ngọc Duy"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvtitle3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lncustomer"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="THÔNG TIN DỊCH VỤ"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/tvtitle4"
                android:layout_below="@id/tvtitle3"
                android:background="@color/ColorWhite" />

            <TextView
                android:id="@+id/tv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvtitle3"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="Chỉ số nước ban đầu:"
                android:textSize="18dp"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/tvcontractwater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvtitle3"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/tv5"
                android:text="10"
                android:textSize="18dp"></TextView>

            <TextView
                android:id="@+id/tv6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv5"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:text="Chỉ số điện ban đầu:"
                android:textSize="18dp"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/tvcontractelectric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv5"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_toRightOf="@+id/tv6"
                android:text="20"
                android:textSize="18dp"></TextView>


            <TextView
                android:id="@+id/tvtitle4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv6"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:text="THÔNG TIN DỊCH VỤ KHÁC"
                android:textSize="16dp" />

            <TextView
                android:drawableRight="@drawable/ic_spinner"
                android:id="@+id/tvcontractservice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvtitle4"
                android:background="@color/ColorWhite"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text=""
                android:textSize="18dp"
                android:textStyle="bold"></TextView>


        </RelativeLayout>
    </ScrollView>

</LinearLayout>